--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <div id="root"></div>
+    <div class="myPortalModalDiv"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
