--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/1.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Event0</title>
+    <title>Event0 - One Solution To all Events</title>
   </head>
   <body>
     <div id="root"></div>
